compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@statements.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main() -> void { let a = 0; let b = 1; }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            8095934718272011788,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    8095934718272011788,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Identifier {
                        name: "main",
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        id: ItemId(
                            9344623788042179276,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Identifier {
                                name: "void",
                                location: <internal>:13:17,
                            },
                            location: <internal>:13:17,
                        },
                        type_params: [],
                        location: <internal>:13:17,
                    },
                ),
                block: Some(
                    Block {
                        statements: [
                            Statement {
                                id: StatementId {
                                    def: ItemId(
                                        8095934718272011788,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                kind: Variable(
                                    VariableDeclaration {
                                        id: StatementId {
                                            def: ItemId(
                                                8095934718272011788,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        name: Identifier {
                                            name: "a",
                                            location: <internal>:24:25,
                                        },
                                        declared_type: None,
                                        value: Expression {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    8095934718272011788,
                                                ),
                                                index: Idx(
                                                    1,
                                                ),
                                            },
                                            location: <internal>:28:29,
                                            kind: Literal(
                                                Literal {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            8095934718272011788,
                                                        ),
                                                        index: Idx(
                                                            1,
                                                        ),
                                                    },
                                                    location: <internal>:28:29,
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: ExpressionId {
                                                                def: ItemId(
                                                                    8095934718272011788,
                                                                ),
                                                                index: Idx(
                                                                    1,
                                                                ),
                                                            },
                                                            value: 0,
                                                            kind: I32,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                ),
                                location: <internal>:20:30,
                            },
                            Statement {
                                id: StatementId {
                                    def: ItemId(
                                        8095934718272011788,
                                    ),
                                    index: Idx(
                                        2,
                                    ),
                                },
                                kind: Variable(
                                    VariableDeclaration {
                                        id: StatementId {
                                            def: ItemId(
                                                8095934718272011788,
                                            ),
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        name: Identifier {
                                            name: "b",
                                            location: <internal>:35:36,
                                        },
                                        declared_type: None,
                                        value: Expression {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    8095934718272011788,
                                                ),
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            location: <internal>:39:40,
                                            kind: Literal(
                                                Literal {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            8095934718272011788,
                                                        ),
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    location: <internal>:39:40,
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: ExpressionId {
                                                                def: ItemId(
                                                                    8095934718272011788,
                                                                ),
                                                                index: Idx(
                                                                    3,
                                                                ),
                                                            },
                                                            value: 1,
                                                            kind: I32,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                ),
                                location: <internal>:31:41,
                            },
                        ],
                        location: <internal>:18:43,
                    },
                ),
                location: <internal>:0:43,
            },
        ),
    },
    statements: {
        StatementId {
            def: ItemId(
                8095934718272011788,
            ),
            index: Idx(
                0,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    8095934718272011788,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Variable(
                VariableDeclaration {
                    id: StatementId {
                        def: ItemId(
                            8095934718272011788,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    name: Identifier {
                        name: "a",
                        location: <internal>:24:25,
                    },
                    declared_type: None,
                    value: Expression {
                        id: ExpressionId {
                            def: ItemId(
                                8095934718272011788,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:28:29,
                        kind: Literal(
                            Literal {
                                id: ExpressionId {
                                    def: ItemId(
                                        8095934718272011788,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                location: <internal>:28:29,
                                kind: Int(
                                    IntLiteral {
                                        id: ExpressionId {
                                            def: ItemId(
                                                8095934718272011788,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        value: 0,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:20:30,
        },
        StatementId {
            def: ItemId(
                8095934718272011788,
            ),
            index: Idx(
                2,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    8095934718272011788,
                ),
                index: Idx(
                    2,
                ),
            },
            kind: Variable(
                VariableDeclaration {
                    id: StatementId {
                        def: ItemId(
                            8095934718272011788,
                        ),
                        index: Idx(
                            2,
                        ),
                    },
                    name: Identifier {
                        name: "b",
                        location: <internal>:35:36,
                    },
                    declared_type: None,
                    value: Expression {
                        id: ExpressionId {
                            def: ItemId(
                                8095934718272011788,
                            ),
                            index: Idx(
                                3,
                            ),
                        },
                        location: <internal>:39:40,
                        kind: Literal(
                            Literal {
                                id: ExpressionId {
                                    def: ItemId(
                                        8095934718272011788,
                                    ),
                                    index: Idx(
                                        3,
                                    ),
                                },
                                location: <internal>:39:40,
                                kind: Int(
                                    IntLiteral {
                                        id: ExpressionId {
                                            def: ItemId(
                                                8095934718272011788,
                                            ),
                                            index: Idx(
                                                3,
                                            ),
                                        },
                                        value: 1,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:31:41,
        },
    },
    expressions: {
        ExpressionId {
            def: ItemId(
                8095934718272011788,
            ),
            index: Idx(
                1,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    8095934718272011788,
                ),
                index: Idx(
                    1,
                ),
            },
            location: <internal>:28:29,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            8095934718272011788,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:28:29,
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    8095934718272011788,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        ExpressionId {
            def: ItemId(
                8095934718272011788,
            ),
            index: Idx(
                3,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    8095934718272011788,
                ),
                index: Idx(
                    3,
                ),
            },
            location: <internal>:39:40,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            8095934718272011788,
                        ),
                        index: Idx(
                            3,
                        ),
                    },
                    location: <internal>:39:40,
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    8095934718272011788,
                                ),
                                index: Idx(
                                    3,
                                ),
                            },
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
