compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@constrained_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn test<T1: Numeric, T2: Numeric>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14825577416135075223,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    14825577416135075223,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "test",
                            location: <internal>:3:7,
                        },
                    ),
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [
                        TypeParameter {
                            name: Identifier {
                                name: "T1",
                                location: <internal>:8:10,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    id: ItemId(
                                        6129574414018423941,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "Numeric",
                                                location: <internal>:12:19,
                                            },
                                        ),
                                        location: <internal>:12:19,
                                    },
                                    type_params: [],
                                    location: <internal>:12:19,
                                },
                            ],
                            location: <internal>:8:10,
                        },
                        TypeParameter {
                            name: Identifier {
                                name: "T2",
                                location: <internal>:21:23,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    id: ItemId(
                                        6129574414018423941,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "Numeric",
                                                location: <internal>:25:32,
                                            },
                                        ),
                                        location: <internal>:25:32,
                                    },
                                    type_params: [],
                                    location: <internal>:25:32,
                                },
                            ],
                            location: <internal>:21:23,
                        },
                    ],
                },
                return_type: Type {
                    id: ItemId(
                        9344623788042179276,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "void",
                                location: <internal>:39:43,
                            },
                        ),
                        location: <internal>:39:43,
                    },
                    type_params: [],
                    location: <internal>:39:43,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:44:46,
                    },
                ),
                location: <internal>:0:46,
            },
        ),
    },
    statements: {},
    expressions: {},
}
