compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@empty_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn test<>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14825577416135075223,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    14825577416135075223,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "test",
                            location: <internal>:3:7,
                        },
                    ),
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Some(
                    Type {
                        id: ItemId(
                            9344623788042179276,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "void",
                                    location: <internal>:15:19,
                                },
                            ),
                            location: <internal>:15:19,
                        },
                        type_params: [],
                        location: <internal>:15:19,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:20:22,
                    },
                ),
                location: <internal>:0:22,
            },
        ),
    },
    statements: {},
    expressions: {},
}
