compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@multiple_constrained_types.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn test<T: Numeric + Floating>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14825577416135075223,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    14825577416135075223,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "test",
                            location: <internal>:3:7,
                        },
                    ),
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T",
                            location: <internal>:8:9,
                        },
                        type_id: None,
                        type_param_id: None,
                        constraints: [
                            Type {
                                id: ItemId(
                                    9613957012452617865,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "Numeric",
                                            location: <internal>:11:18,
                                        },
                                    ),
                                    location: <internal>:11:18,
                                },
                                type_params: [],
                                location: <internal>:11:18,
                            },
                            Type {
                                id: ItemId(
                                    4786170851539006806,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "Floating",
                                            location: <internal>:21:29,
                                        },
                                    ),
                                    location: <internal>:21:29,
                                },
                                type_params: [],
                                location: <internal>:21:29,
                            },
                        ],
                        location: <internal>:8:9,
                    },
                ],
                return_type: Some(
                    Type {
                        id: ItemId(
                            2745571829241957363,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "void",
                                    location: <internal>:36:40,
                                },
                            ),
                            location: <internal>:36:40,
                        },
                        type_params: [],
                        location: <internal>:36:40,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:41:43,
                    },
                ),
                location: <internal>:0:43,
            },
        ),
    },
    statements: {},
    expressions: {},
}
