compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@multiple_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn test<T1, T2>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13811513517830038765,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    13811513517830038765,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "test",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [
                        TypeParameter {
                            name: Identifier {
                                name: "T1",
                                location: <internal>:8:10,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:8:10,
                        },
                        TypeParameter {
                            name: Identifier {
                                name: "T2",
                                location: <internal>:12:14,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:12:14,
                        },
                    ],
                },
                return_type: Type {
                    id: ItemId(
                        17666474489655347949,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "void",
                                location: <internal>:21:25,
                            },
                            type_arguments: [],
                            location: <internal>:21:25,
                        },
                        location: <internal>:21:25,
                    },
                    location: <internal>:21:25,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:26:28,
                    },
                ),
                location: <internal>:0:28,
            },
        ),
    },
    statements: {},
    expressions: {},
}
