compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@multiple_types_with_multiple_constraints.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn test<T1: Numeric + Floating, T2: Numeric + Floating>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1608888409088296675: Function(
            FunctionDefinition {
                id: 1608888409088296675,
                func_id: None,
                visibility: Private,
                name: test,
                parameters: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: <internal>:8:10,
                        },
                        type_id: None,
                        type_param_id: None,
                        constraints: [
                            Type {
                                name: Numeric,
                                type_params: [],
                                location: <internal>:12:19,
                            },
                            Type {
                                name: Floating,
                                type_params: [],
                                location: <internal>:22:30,
                            },
                        ],
                        location: <internal>:8:10,
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: <internal>:32:34,
                        },
                        type_id: None,
                        type_param_id: None,
                        constraints: [
                            Type {
                                name: Numeric,
                                type_params: [],
                                location: <internal>:36:43,
                            },
                            Type {
                                name: Floating,
                                type_params: [],
                                location: <internal>:46:54,
                            },
                        ],
                        location: <internal>:32:34,
                    },
                ],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:61:65,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:66:68,
                    },
                ),
                location: <internal>:0:68,
            },
        ),
    },
    statements: {},
    expressions: {},
}
